--- a/AndroidUtils/build.gradle
+++ b/AndroidUtils/build.gradle
@@ -24,4 +24,5 @@ android {
 
 dependencies {
     compile "com.android.support:appcompat-v7:18.0.+"
+    compile "com.google.android.gms:play-services:3.1.+"
 }
