--- a/AndroidUtils/build.gradle
+++ b/AndroidUtils/build.gradle
@@ -23,6 +23,6 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:18.0.+"
-    compile "com.google.android.gms:play-services:3.1.+"
+    compile fileTree(dir: 'libs', include: '*.jar')
+	compile 'com.android.support:appcompat-v7:18.0.0'
 }
