--- a/AndroidUtils/src/main/AndroidManifest.xml
+++ b/AndroidUtils/src/main/AndroidManifest.xml
@@ -1,15 +1,35 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nityankhanna.androidutils"
-    android:versionCode="1"
-    android:versionName="1.0">
+          package="com.nityankhanna.androidutils"
+          android:versionCode="1"
+          android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="16" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.NFC"/>
 
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="16"/>
+
+    <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <activity
+            android:name="com.nityankhanna.androidutils.MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
