--- a/AndroidUtils/src/main/AndroidManifest.xml
+++ b/AndroidUtils/src/main/AndroidManifest.xml
@@ -13,13 +13,6 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="16"/>
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
-
-    </application>
+    <application/>
 
 </manifest>
