--- a/AndroidUtils/build.gradle
+++ b/AndroidUtils/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 android {
     compileSdkVersion 18
-    buildToolsVersion "17.0.0"
+    buildToolsVersion '17.0.0'
 
     defaultConfig {
         minSdkVersion 14
@@ -27,15 +27,14 @@ android {
                 srcDir 'src/main/java'
             }
             resources {
-                srcDir 'src/../lib'
+                srcDir 'src/main/res'
             }
         }
     }
 }
 
 task clearJar(type: Delete) {
-    delete 'build/libs/ProjectName.jar'
-    delete 'build/libs/android-utils-sources.jar'
+    delete 'build/libs/android-utils.jar'
 }
 
 task makeJar(type: Copy) {
@@ -48,6 +47,6 @@ task makeJar(type: Copy) {
 makeJar.dependsOn(clearJar, build)
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:18.0.0'
     compile fileTree(dir: 'libs', include: '*.jar')
-	compile 'com.android.support:appcompat-v7:18.0.0'
 }
