--- a/AndroidUtils/build.gradle
+++ b/AndroidUtils/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.7.+'
     }
 }
-apply plugin: 'android'
+apply plugin: 'android-library'
 
 repositories {
     mavenCentral()
@@ -29,8 +29,8 @@ android {
             }
         }
     }
-    buildTypes {
-    }
+//    buildTypes {
+//    }
 }
 
 task clearJar(type: Delete) {
@@ -41,7 +41,7 @@ task makeJar(type: Copy) {
     from('build/bundles/release/')
     into('build/libs/')
     include('classes.jar')
-    rename ('classes.jar', 'android-utils.jar')
+    rename('classes.jar', 'android-utils.jar')
 }
 
 makeJar.dependsOn(clearJar, build)
