--- a/AndroidUtils/build.gradle
+++ b/AndroidUtils/build.gradle
@@ -15,10 +15,17 @@ repositories {
 android {
     compileSdkVersion 19
     buildToolsVersion '17.0.0'
+
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 16
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     sourceSets {
         main {
             java {
@@ -53,5 +60,5 @@ makeJar.dependsOn(clearJar, build)
 
 dependencies {
     compile 'com.android.support:appcompat-v7:18.0.0'
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile files('libs/annotations.jar')
 }
