--- a/AndroidUtils/build.gradle
+++ b/AndroidUtils/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.7.+'
+        classpath 'com.android.tools.build:gradle:0.8.+'
     }
 }
 apply plugin: 'android-library'
@@ -14,18 +14,19 @@ repositories {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '17.0.0'
-
+    buildToolsVersion '19.0.1'
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 16
-    }
 
+        testPackageName "com.nityankhanna.tests"
+        testInstrumentationRunner "android.test.InstrumentationTestRunner"
+        testFunctionalTest true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-
     sourceSets {
         main {
             java {
@@ -35,6 +36,10 @@ android {
                 srcDir 'src/main/res'
             }
         }
+    }
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
     }
 }
 
@@ -53,6 +58,7 @@ task makeJar(type: Copy) {
 makeJar.dependsOn(clearJar, build)
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:18.0.0'
+    compile 'com.android.support:appcompat-v7:19.0.1'
     compile files('libs/annotations.jar')
 }
+
