--- a/AndroidUtils/build.gradle
+++ b/AndroidUtils/build.gradle
@@ -7,6 +7,11 @@ buildscript {
     }
 }
 apply plugin: 'android-library'
+apply plugin: 'maven'
+
+group 'com.nityankhanna'
+
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -14,7 +19,7 @@ repositories {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '19.0.2'
+    buildToolsVersion '19.0.3'
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 16
