--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,14 @@
 	<packaging>jar</packaging>
 	<name>androidutils</name>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
 	<dependencies>
 
 		<dependency>
@@ -34,8 +42,6 @@
             <artifactId>annotations</artifactId>
             <version>5.1</version>
         </dependency>
-
-
     </dependencies>
 
 	<build>
@@ -54,6 +60,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
 				<executions>
 					<execution>
 						<!-- use the copy resources instead of resources, which adds it to 
@@ -75,6 +82,15 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <parallel>methods</parallel>
+                    <threadCount>10</threadCount>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
