--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.nityankhanna</groupId>
-	<artifactId>androidutils</artifactId>
-	<version>1.0</version>
-	<packaging>jar</packaging>
-	<name>androidutils</name>
+    <groupId>com.nityankhanna</groupId>
+    <artifactId>androidutils</artifactId>
+    <version>1.0</version>
+    <packaging>jar</packaging>
+    <name>androidutils</name>
 
     <licenses>
         <license>
@@ -17,13 +18,13 @@
         </license>
     </licenses>
 
-	<dependencies>
+    <dependencies>
 
-		<dependency>
-			<groupId>com.google.android</groupId>
-			<artifactId>android</artifactId>
-			<version>4.1.1.4</version>
-	    </dependency>
+        <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>android</artifactId>
+            <version>4.1.1.4</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.android</groupId>
@@ -44,10 +45,8 @@
         </dependency>
     </dependencies>
 
-	<build>
-		<finalName>${project.artifactId}</finalName>
-
-		<plugins>
+    <build>
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -57,31 +56,33 @@
                 </configuration>
                 <version>3.1</version>
             </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
                 <version>2.6</version>
-				<executions>
-					<execution>
-						<!-- use the copy resources instead of resources, which adds it to 
-							the eclipse buildpath -->
-						<phase>initialize</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.basedir}/res</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${project.basedir}/src/templates/res</directory>
-									<targetPath>${project.basedir}/res</targetPath>
-									<filtering>true</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+                <executions>
+                    <execution>
+                        <!-- use the copy resources instead of resources, which adds it to
+                            the eclipse buildpath -->
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.basedir}/res</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/src/templates/res</directory>
+                                    <targetPath>${project.basedir}/res</targetPath>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -91,26 +92,41 @@
                     <threadCount>10</threadCount>
                 </configuration>
             </plugin>
-		</plugins>
-	</build>
 
-	<profiles>
-		<profile>
-			<id>release</id>
-			<!-- via this activation the profile is automatically used when the release 
-				is done with the maven release plugin -->
-			<activation>
-				<property>
-					<name>performRelease</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<!-- the signed apk then needs to be zipaligned and we activate proguard
-						and we run the manifest update -->
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <!-- via this activation the profile is automatically used when the release
+                is done with the maven release plugin -->
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- the signed apk then needs to be zipaligned and we activate proguard
+                        and we run the manifest update -->
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
