--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <packaging>jar</packaging>
     <name>androidutils</name>
 
+    <developers>
+        <developer>
+            <name>Nityan Khanna</name>
+            <email>nityan_dot_khanna_at_gmail_dot_com</email>
+        </developer>
+    </developers>
+
     <licenses>
         <license>
             <name>MIT License</name>
@@ -49,6 +56,13 @@
             <artifactId>annotations</artifactId>
             <version>5.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -135,4 +149,8 @@
             </build>
         </profile>
     </profiles>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
