--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <url>https://github.com/nityan/android-utils</url>
         <connection>scm:git:git://github.com/nityan/android-utils.git</connection>
         <developerConnection>scm:git:git://github.com/nityan/android-utils.git</developerConnection>
+        <tag>androidutils-1.1</tag>
     </scm>
 
     <repositories>
@@ -101,7 +102,7 @@
                             <source>1.7</source>
                             <target>1.7</target>
                         </configuration>
-                        <version>3.1</version>
+                        <version>3.2</version>
                     </plugin>
 
                     <plugin>
