--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,5 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-android-17
+script:
+    mvn install -Dmaven.tests.skip=true -e
