--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,13 @@
             <version>5.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
+         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+         <dependency>
+             <groupId>org.apache.logging.log4j</groupId>
+             <artifactId>log4j-core</artifactId>
+             <version>2.13.3</version>
+         </dependency>
+             
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
